# webrtc-vad

./: CMakeLists.txt  conanfile.txt
.github/workflows/: cmake-multi-platform.yml
example/: CMakeLists.txt  main.cc
src/: CMakeLists.txt
src/rtc_base/: time_utils.h
src/rtc_base/units/: unit_base.h
src/system_wrappers/source/: cpu_features.cc
